fix(login) : corection css overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ h1 {
 h2 {
   @apply text-2xl mb-4;
 }
+h3 {
+  @apply text-xl mb-4;
+}
+h4 {
+  @apply text-lg mb-4;
+}
 
 .el-main {
   overflow: initial;
@@ -17,13 +23,16 @@ h2 {
   @apply flex content-center justify-center items-center h-full;
 }
 .container-form {
-  @apply overflow-hidden m-4 bg-white shadow-lg max-w-lg rounded-lg md:flex;
+  @apply m-4 bg-white shadow-lg max-w-2xl rounded-lg md:flex;
 }
 form {
   @apply flex-1 p-4 pt-0 md:flex flex-col justify-center;
 }
 form h1 {
   @apply text-2xl text-center font-bold text-gray-800 mt-4 px-4;
+}
+.el-input {
+  min-width: 300px;
 }
 /*end form css */
 .el-button:isnot("is-circle") {
